syntax = "proto3";

package testapis.imports.oneof_cross_file;

import "testapis/imports/oneof_cross_file/member.proto";

message OneofParent {
  oneof oneof_field {
    OneofMember1 member1 = 1;
    OneofMember2 member2 = 2;
  }
}
